# paper-bridge

./: .gitignore  LICENSE  README.md  docker-compose.yml  package.json  pnpm-lock.yaml
apps/web/: eslint.config.mjs  package.json  tsconfig.json
apps/web/src/app/: layout.tsx
apps/web/src/components/: citation-list.tsx  confirm-modal.tsx  job-list.tsx  navigation.tsx
apps/web/src/hooks/: use-job-tracker.ts
apps/web/src/lib/: api.ts  env.ts  (+3 more)
backend/: .env.example  BACKEND_GUIDE.md  Dockerfile  README.md  api_test.http  main.py  pyproject.toml
backend/app/: main.py
backend/app/core/: config.py  logging.py  rate_limit.py  startup.py
backend/app/db/: database.py  migrations.sql  models.py
backend/app/routers/: __init__.py  ask.py  documents.py  embed.py  export.py  extract.py  health.py  jobs.py  review.py
backend/app/routers/documents/: __init__.py
backend/app/schemas/: api.py  extraction.py  qa.py  review.py
backend/app/services/: chunker.py  document_status.py  embedder.py  extractor.py  pdf_parser.py  pipeline.py  processing_jobs.py  qa.py  retriever.py  supabase_storage.py  validator.py
backend/app/utils/: ids.py  tokens.py
backend/scripts/: smoke_pipeline.py  smoke_rag.py  verify_rag.py
backend/tests/: test_api_contract.py  test_pipeline_api.py  test_qa_service.py  test_retriever_rerank.py
docs/: API.md  DEPLOYMENT.md  DOC_A_How_PaperBridge_Backend_Works.md  DOC_B_How_To_Test_PaperBridge_Backend.md  LOCAL_DEV.md  README.md
frontend/: .prettierignore  eslint.config.mjs  pnpm-lock.yaml
frontend/app/: page.tsx
scripts/: smoke_pipeline.py
(+9 files in other folders)
