[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.132.0",
    "httpx>=0.28.1",
    "instructor>=1.14.5",
    "openai>=2.23.0",
    "pgvector>=0.4.2",
    "psycopg[binary]>=3.3.3",
    "pydantic-settings>=2.13.1",
    "pymupdf>=1.27.1",
    "python-dotenv>=1.2.1",
    "python-multipart>=0.0.22",
    "rich>=14.3.3",
    "sqlalchemy>=2.0.46",
    "tenacity>=9.1.4",
    "tiktoken>=0.12.0",
    "uvicorn>=0.41.0",
]
